# rm-cli

./: .gitignore  CHANGELOG.md  README.md  install.bat  pyproject.toml  rm_cli.py  rmc.bat  verifica_janelas_windows.py
